crates/toml/tests/snapshots/invalid/table/duplicate-key-09.stderr
TOML parse error at line 5, column 1
  |
5 | [a]
  | ^
invalid table header
duplicate key `a` in document root
